# HarmoniAPI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  nixpacks.toml  pyproject.toml  railway.json  test_resend.py
.claude/agents/: best-practicer-researcher.md  code-simplicity-reviewer.md  git-commit-protocol.md  security-sentinel.md
alembic/: env.py
alembic/versions/: 2f3258f667c1_auto_20251109113435.py  3516fa16368a_auto_20251110191629.py  b618ec5853ee_auto_20251122091159.py  c83013567e66_auto_20251109080903.py
docs/: stripe-flow.md
openspec/: project.md
openspec/changes/add-admin-auth/: design.md  proposal.md  tasks.md
openspec/changes/add-calorie-calculator/: tasks.md
openspec/specs/admin-authentication/: spec.md
openspec/specs/admin-management/: spec.md
openspec/specs/calorie-calculator/: spec.md
openspec/specs/email-verification/: spec.md
openspec/specs/file-storage/: spec.md
openspec/specs/payment-processing/: spec.md
openspec/specs/tariff-management/: spec.md
openspec/specs/user-registration/: spec.md
src/: __init__.py  main.py
src/core/: __init__.py  dependencies.py  exceptions.py  logging.py  security.py  settings.py
src/db/: __init__.py  all_models.py  base.py  engine.py  mixin.py
src/modules/admin/: __init__.py  exceptions.py  models.py  routes.py  schemas.py  service.py
static/css/: admin.css
static/js/: admin.js
templates/: base.html
templates/admin/: dashboard.html  login.html  tariff_files.html  tariff_form.html  tariffs.html
(+60 files in other folders)
